misc cleanup pass